--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,10 +35,60 @@ h1 {
 h3{
 	margin-top: 22px;
 }
+.cover {
+	position: fixed;
+	width: 100%;
+	height: 150%;
+	z-index: 1;
+	background-color: #fff;
+	transition: transform 0.6s;
+	transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+}
+.cover.cover-hide {
+	transform: translate3d(0, -100%, 0) translate3d(0, 0, 0);
+}
+.resume::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	content: '';
+	opacity: 0;
+	transition: opacity 0.6s;
+	transition-timing-function: ease-in-out;
+	pointer-events: none;
+
+}
+.resume.resume-hide::after{
+	opacity: 1;
+}
+.cover .card {
+	text-align: center;
+	margin-top: 10%;
+}
+.avatar {
+	background-image: url('https://secure.gravatar.com/avatar/9b230e3c7e29ad7f808f5030e122f45f');
+	background-size: contain;
+	height: 150px;
+	width: 150px;
+	margin: 0 auto;
+	-webkit-border-radius: 75px;
+	-moz-border-radius: 75px;
+	border-radius: 75px;
+}
 .container {
 	max-width: 940px;
 	background-color:#fff;
 	padding-bottom:40px;
+}
+.card-btn-close {
+	float: right;
+	margin-top: 10px;
+	color: #666;
+	border: none;
+	background: none;
 }
 ol {
 	list-style:none;
@@ -88,6 +138,9 @@ section {
 @media screen and (min-width: 768px) {
 	.container {
 		margin:40px auto 60px;
+	}
+	.cover {
+		margin-top: -40px;
 	}
 	.contact-info {
 		float:right;
