--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,11 +41,15 @@ h3{
 	height: 100%;
 	z-index: 1;
 	background-color: #fff;
+	-webkit-transition: all 0.6s;
 	transition: transform 0.6s;
 	transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+
 }
 .cover.cover-hide {
+	-webkit-transform: translate3d(0, -100%, 0) translate3d(0, 0, 0);
 	transform: translate3d(0, -100%, 0) translate3d(0, 0, 0);
+
 }
 .resume::after {
 	position: absolute;
